# pyomo-cp

./: .gitignore  CHANGELOG.md  CITATION.cff  NOTICE  README.md  ROADMAP.md  _typos.toml  pyproject.toml
.github/workflows/: ci.yml
examples/: facility_layout.ipynb  plant_layout.ipynb
src/pyomo_cp/: __init__.py  discretize.py
src/pyomo_cp/backends/: __init__.py  cpsat.py
tests/: test_cpsat_gdp.py  test_cpsat_integer.py  test_cpsat_logical.py  test_discretize.py  test_smoke.py
