[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyomo-cp"
version = "0.0.1"
description = "Constraint-programming backends for Pyomo: a discretization transform plus CP solver interfaces (CP-SAT first)."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Devin Griffith", email = "dwg176@gmail.com" }]
keywords = ["pyomo", "constraint-programming", "cp-sat", "or-tools", "gdp", "optimization"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = ["pyomo>=6.7"]

[project.optional-dependencies]
cpsat = ["ortools>=9.7"]
dev = ["pytest", "ortools>=9.7"]

[project.urls]
Homepage = "https://github.com/devin-griff/pyomo-cp"
Repository = "https://github.com/devin-griff/pyomo-cp"

[tool.hatch.build.targets.wheel]
packages = ["src/pyomo_cp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
