[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyomo-cp"
version = "0.2.0"
description = "Constraint-programming backends for Pyomo: a discretization transform plus CP solver interfaces (CP-SAT first)."
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [{ name = "Devin Griffith", email = "dwg176@gmail.com" }]
keywords = ["pyomo", "constraint-programming", "cp-sat", "or-tools", "gdp", "optimization"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = ["pyomo>=6.7"]

[project.optional-dependencies]
cpsat = ["ortools>=9.7"]
dev = ["pytest", "pytest-cov", "pyomo-cp[cpsat]"]

[project.urls]
Homepage = "https://github.com/devin-griff/pyomo-cp"
Repository = "https://github.com/devin-griff/pyomo-cp"
Issues = "https://github.com/devin-griff/pyomo-cp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pyomo_cp"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# Mirrors Pyomo's own Black settings so formatting matches upstream exactly.
[tool.black]
line-length = 88
skip-string-normalization = true
skip-magic-trailing-comma = true
